:zap: code refactored

--- a/library-database/VCode-Extension/Introduction.mdx
+++ b/library-database/VCode-Extension/Introduction.mdx
@@ -1,20 +1,18 @@
 import {MdxLayout} from "@/app/mdx-layout/layout.tsx"
 
 export const meta = {
-  author: 'Georgey',
-  title: 'Introduction to Technical Writing',
+  author: 'Arjun P J',
+  title: 'Introduction to Making a Syntax Highlighter Extension',
   slug: 'introduction-to-technical-writing',
   topics: [
-    'technical writing',
-    'software engineering',
-    'technical writing basics',
+    'Vs-Code-Extension',
+    'Syntax Highlighting',
+    'TextMate Grammar',
   ],
 };
 
 
-# Welcome to my MDX page now!
-## Welcome
-### Welcome
+# File-1
 
 
 
